# blog

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: CLAUDE.md
.github/workflows/: docker.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.vue  api.ts  router.ts  types.ts
src/: assets.rs  auth.rs  config.rs  files.rs  lib.rs  markdown.rs  path_util.rs  state.rs
src/ai/: config.rs  loop_driver.rs  mod.rs  tool_permissions.rs  tool_registry.rs
src/entity/: assistant_message.rs  assistant_session.rs  file.rs  file_blob.rs  file_thumbnail.rs  gallery.rs  image.rs  llm_model.rs  llm_provider.rs  menu.rs  mod.rs  oauth_client.rs  oauth_code.rs  oauth_token.rs  page.rs  page_revision.rs  tag.rs  token.rs  tool_permission.rs  user.rs  user_mcp_server.rs
src/migration/: m_001_create_users.rs  m_002_create_tokens.rs  m_003_create_tags.rs  m_004_create_menus.rs  m_005_create_pages.rs  m_006_create_images.rs  m_007_create_galleries.rs  m_008_add_menu_private.rs  m_009_create_oauth.rs  m_010_replace_images_with_files.rs  m_011_create_assistant_sessions.rs  m_012_create_assistant_messages.rs  m_013_create_user_mcp_servers.rs  m_014_create_llm_providers.rs  m_015_split_llm_models.rs  m_016_create_tool_permissions.rs  m_017_add_files_path.rs  m_018_add_assistant_sessions_mcp_server_ids.rs  m_019_drop_assistant_sessions_system_prompt.rs  m_020_add_galleries_path.rs  m_021_normalize_paths.rs  mod.rs  (+1 more)
templates/: 404.html  base.html  menu_page.html  page_detail.html  tag_pages.html
(+178 files in other folders)
