[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blog_server"
path = "src/bin/blog_server.rs"

[[bin]]
name = "blog_migration"
path = "src/bin/blog_migration.rs"

[[bin]]
name = "blog_cli"
path = "src/bin/blog_cli.rs"

[dependencies]
axum          = { version = "0.8", features = ["multipart"] }
tokio         = { version = "1", features = ["full"] }
sea-orm       = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
async-trait   = "0.1"
minijinja     = { version = "2", features = ["loader"] }
pulldown-cmark = "0.11"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tower-http    = { version = "0.6", features = ["fs", "trace", "catch-panic"] }
dotenvy       = "0.15"
argon2        = "0.5"
rand          = "0.8"
axum-extra    = { version = "0.10", features = ["cookie"] }
chrono        = { version = "0.4", features = ["serde"] }
hex           = "0.4"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image         = "0.25"
base64        = "0.22"
diffy         = "0.4"
sha2          = "0.10"
url           = "2"
